--- a/src/theme/templates/page.hubl.html
+++ b/src/theme/templates/page.hubl.html
@@ -45,6 +45,21 @@
     path="../components/modules/highlights.jsx",
     brandColors="{{ theme.brand_color }}"
   %}
+
+  {% dnd_area "middle_dnd_area" label="Middle Area" %}
+    {% dnd_section %}
+      {% dnd_column width=12 %}
+        {% dnd_row %}
+          {% dnd_module path='@hubspot/rich_text', label="Form" %}
+            {% module_attribute "html" %}
+             
+            {% end_module_attribute %}
+          {% end_dnd_module %}
+        {% end_dnd_row %}
+      {% end_dnd_column %}
+    {% end_dnd_section %}
+  {% end_dnd_area %}
+
     
   {% module
     "Home"
